Inclusão de usuário nas tasks